fix: correct text alignment in Button component

--- a/components/commons/Button/style.module.scss
+++ b/components/commons/Button/style.module.scss
@@ -93,6 +93,12 @@
         background-color: #F6E7FF;
       }
     }
+
+    .content {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
   }
 
   &.active, &.success, &.error {
@@ -130,8 +136,5 @@
 
   .content {
     flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
   }
 }
